Add telegram integration